# openapi-rs

./: .gitignore  Cargo.toml  README.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: rust.yml
client/: package-lock.json  package.json  tsconfig.json
client/src/: index.ts
client/src/api/: v1.d.ts
crates/entity_macro/: Cargo.toml
crates/entity_macro/src/: lib.rs
crates/server/: Cargo.toml
crates/server/api/: v1.json
crates/server/fixtures/: fixtures.sh  identitys_users.json  users.json
crates/server/migrations/01-core/: up.sql
crates/server/src/: api.rs  context.rs  database.rs  entity.rs  error.rs  imp.rs  kratos.rs  main.rs  test.rs
crates/server/src/entity/: identity_user.rs  template  user.rs
deploy/: Dockerfile  litestream.yml  run.sh
server/: Cargo.toml  build.rs
server/api/: v1.json
server/fixtures/: counter.tsv
server/migrations/01-core/: up.sql
server/src/: context.rs  database.rs  entity.rs  main.rs  routes.rs
server/src/entity/: counter.rs
server/src/entity/sql/counter/: retrieve.sql  upsert.sql
server/src/routes/: counter.rs
