[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
crossbeam-channel = "0.5.13"
dropshot = "0.10.1"
include_dir = "0.7.3"
lazy_static = "1.4.0"
num_cpus = "1.16.0"
rusqlite = { version = "0.31.0", features = [
    "bundled",
    "functions",
    "chrono",
    "uuid",
] }
rusqlite_migration = { version = "1.2.0", features = ["from-directory"] }
schemars = "0.8.20"
serde = "1.0.202"
tokio = "1.37.0"
uuid = { version = "1.8.0", features = ["v4", "serde"] }

[dev-dependencies]
csv = "1.3.0"
progenitor = "0.7.0"
progenitor-client = "0.7.0"
reqwest = { version = "0.11.27", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
anyhow = "1.0.86"
crossbeam-channel = "0.5.13"
dropshot = "0.10.1"
include_dir = "0.7.3"
lazy_static = "1.4.0"
num_cpus = "1.16.0"
prettyplease = "0.2.20"
schemars = "0.8.20"
serde = "1.0.202"
rusqlite = { version = "0.31.0", features = [
    "bundled",
    "functions",
    "chrono",
    "uuid",
] }
rusqlite_migration = { version = "1.2.0", features = ["from-directory"] }
tokio = "1.37.0"
uuid = "1.8.0"
