[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
entity_macro = { path = "../entity_macro" }

anyhow = "1.0.86"
chrono = { version = "0.4.38", features = ["serde"] }
crossbeam-channel = "0.5.13"
dropshot = { git = "https://github.com/oxidecomputer/dropshot.git" }
http = "0.2.12"
include_dir = "0.7.3"
kratos = { path = "vendor/kratos" }
lazy_static = "1.4.0"
num_cpus = "1.16.0"
reqwest = { version = "0.11.27", features = ["json", "stream"] }
rusqlite = { version = "0.31.0", features = [
    "bundled",
    "functions",
    "chrono",
    "uuid",
    "serde_json",
] }
rusqlite_migration = { version = "1.2.0", features = ["from-directory"] }
schemars = { version = "0.8.21", features = ["chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.120"
slog = "2.7.0"
tokio = "1.37.0"
uuid = { version = "1.8.0", features = ["v4", "serde"] }

[dev-dependencies]
progenitor = "0.7.0"
progenitor-client = "0.7.0"
