[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
entity_macro = { path = "../entity_macro" }

anyhow = "1.0.91"
chrono = { version = "0.4.38", features = ["serde"] }
crossbeam-channel = "0.5.13"
dropshot = "0.12.0"
http = "1.1.0"
include_dir = "0.7.4"
kratos = { path = "vendor/kratos" }
lazy_static = "1.5.0"
num_cpus = "1.16.0"
reqwest = { version = "0.12.9", features = ["json", "stream"] }
rusqlite = { version = "0.32.1", features = [
    "bundled",
    "functions",
    "chrono",
    "uuid",
    "serde_json",
] }
rusqlite_migration = { version = "1.3.1", features = ["from-directory"] }
schemars = { version = "0.8.21", features = ["chrono"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
slog = "2.7.0"
tokio = "1.41.0"
uuid = { version = "1.11.0", features = ["v4", "serde"] }

[dev-dependencies]
progenitor = "0.8.0"
progenitor-client = "0.8.0"
